--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="James - Jamescoin.io - The Solana Meme" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <meta
+      property="og:description"
+      content="James - Jamescoin.io - The Solana Meme"
+    />
+
+    <meta
+      property="og:site_name"
+      content="James - Jamescoin.io - The Solana Meme"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
