--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       property="og:description"
       content="James - Jamescoin.io - The Solana Meme"
     />
+    <meta
+      property="description"
+      content="James - Jamescoin.io - The Solana Meme"
+    />
 
     <meta
       property="og:site_name"
